# Fall-2016

./: .gitignore
BitStripper/: BitStripper.sln
BitStripper/BitStripper/: BitStripper.csproj  Program.cs
BitStripper/BitStripper/Properties/: AssemblyInfo.cs
Cone/: CMakeLists.txt  Cone.cpp  Cone.h  Cone.sln  Cone.vcxproj  Cone.vcxproj.filters  Makefile  main.cpp  pass.frag  pass.vert  test_code  test_code.cpp
Crowd Scene/: Crowd Scene.sln  Crowd Scene.vcxproj  Crowd Scene.vcxproj.filters  CrowdScene.cpp  IcosahedronExample.cpp  Material.cpp  Material.h  MaterialType.h  old_test_code.cpp
DES/: DES Analysis.docx  DES.sln
DES/DES/: DES.vcxproj  DES.vcxproj.filters  des.cpp  error_handler.cpp  error_handler.h  exit_code.h  file_processor.cpp  file_processor.h  garbage_producer.cpp  garbage_producer.h  keygen.cpp  keygen.h  mode.h  permutator.cpp  permutator.h  reverser.cpp  reverser.h  rounds.cpp  rounds.h  sbox.h
DES/DESAnalysis/: Analyzer.cs  DESAnalysis.csproj  DESAnalysis.vcxproj  DESAnalysis.vcxproj.filters
DES/DESAnalysis/Properties/: AssemblyInfo.cs
Interpolation/: Interpolation.cpp  Interpolation.sln  Interpolation.vcxproj  Interpolation.vcxproj.filters  OBJReader.h  pass.vert  proj3.frag  proj3.vert
